# parking_app_v1

parking_app/: .env  .gitignore  Cargo.toml  README.md  generate_directory_structure.txt  l10n.yaml  pubspec.yaml  untranslated_messages.txt
parking_app/.dart_tool/: package_config.json  package_config_subset
parking_app/.dart_tool/extension_discovery/: vs_code.json
parking_app/.dart_tool/flutter_gen/gen_l10n/: app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart  app_localizations_zh.dart
parking_app/Database/: m_login_data.sql  m_users_m_owners_data.sql  スキーマ.駐車場アプリのデータベース.sql
parking_app/UI/ログインまたは登録UI/: ログイン.html  新規登録.html
parking_app/android/: build.gradle.kts  gradle.properties
parking_app/android/app/: build.gradle.kts
parking_app/app_core_api/: .env  Cargo.toml
parking_app/ios/: buildServer.json
parking_app/ios/Runner.xcodeproj/: project.pbxproj
parking_app/lib/: main.dart
parking_app/lib/core/: api_endpoints.dart  dio_client.dart  request_model.dart  response_model.dart
parking_app/lib/core/api/: api_constants.dart  api_response.dart
parking_app/lib/core/auth/: auth_signin_api.dart
parking_app/lib/core/client/: dio_client.dart
parking_app/lib/core/interceptors/: app_interceptor.dart  interceptors.dart  logging_interceptor.dart
parking_app/lib/core/models/: auth_signin_model.dart
parking_app/lib/core/routes/: app_router.dart  routes.dart
parking_app/lib/core/security/: csrf_token_provider.dart
parking_app/lib/core/services/: auth_signin_service.dart
parking_app/lib/l10n/: app_en.arb  app_ja.arb  app_localizations.dart  app_zh.arb  intl_en.arb
parking_app/lib/theme/: app_theme.dart  sliding_date_picker.dart  text_styles.dart
parking_app/lib/utils/: date_validator.dart
parking_app/lib/views/: dummy_screen.dart
parking_app/memo/: directory.txt  directory_structure.txt  generate_directory_structure.txt  scheme_memo  structure.txt  基于 Flutter 3.29.3 + Dio 和 Rust 1.86.ini
parking_app/src/: .env.example  .env.production  lib.rs  main.rs
parking_app/src/config/: logging.rs  postgresql_database.rs
parking_app/src/controllers/: api_base.rs  api_error.rs  api_response.rs  auth_controller.rs  auth_signup_controller.rs  constants.rs  health.rs  mod.rs
parking_app/src/middlewares/: csrf_middleware.rs  identity_middleware.rs  jwt.rs
parking_app/src/models/: auth_login_model.rs  auth_model.rs  auth_owner_model.rs  auth_signup_model.rs  auth_user_model.rs  m_login_model.rs  mod.rs
parking_app/src/repositories/: auth_repository.rs  auth_signup_repository.rs  mod.rs
parking_app/src/routes/: route_config.rs
parking_app/src/server/: app_server.rs
parking_app/src/services/: auth_service.rs  auth_signup_service.rs  mod.rs  token_service.rs
parking_app/src/utils/: csrf_token.rs  jwt.rs
parking_app/web/: index.html  manifest.json
(+16 files in other folders)
