[package]
name = "app_core_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"
dotenv = "0.15"
env_logger = "0.11.8"
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
futures = "0.3"

[dev-dependencies]
actix-rt = "2.10"