[package]
name = "app_core_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.19"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
thiserror = "2.0.12"
anyhow = "1.0"

[dev-dependencies]
actix-rt = "2.10"